--- a/templates/parciais/_head.html
+++ b/templates/parciais/_head.html
@@ -1,7 +1,7 @@
 {% load static %}
 
 <meta charset="utf-8">
-<meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport">
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-<link href="{% static 'assets/bootstrap/css/bootstrap.css'%}" rel="stylesheet">
-<link href="{% static 'assets/custom/css/style.css'%}" rel="stylesheet">
+<link rel="stylesheet" href="{% static 'assets/bootstrap/css/bootstrap.css'%}">
+<link rel="stylesheet" href="{% static 'assets/custom/css/style.css'%}">
